project configuration fix

--- a/jmsfundamentals/src/main/resources/jndi.properties
+++ b/jmsfundamentals/src/main/resources/jndi.properties
@@ -1,3 +1,4 @@
 java.naming.factory.initial=org.apache.activemq.artemis.jndi.ActiveMQInitialContextFactory
-connectionFactory.ConnectionFactory=tcp://localhost:616161
+connectionFactory.ConnectionFactory=http://localhost:8161/
+java.naming.provider.url=http://localhost:8161/
 queue.queue/myQueue=myQueue
