--- a/jmsfundamentals/pom.xml
+++ b/jmsfundamentals/pom.xml
@@ -4,13 +4,17 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.jawojnar.jms</groupId>
-    <artifactId>jmsfundamentals</artifactId>
+    <groupId>com.jawojnar.basics</groupId>
+    <artifactId>JmsFundamentals</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
+    <properties>
+        <maven.compiler.source>11</maven.compiler.source>
+        <maven.compiler.target>11</maven.compiler.target>
+    </properties>
 
     <dependencies>
-        <!-- https://mvnrepository.com/artifact/org.apache.activemq/artemis-jms-client-all -->
+        <!-- https://mvnrepository.com/artifact/org.apache.activemq/artemis-server -->
         <dependency>
             <groupId>org.apache.activemq</groupId>
             <artifactId>artemis-jms-client-all</artifactId>
