--- a/jmsfundamentals/src/main/resources/jndi.properties
+++ b/jmsfundamentals/src/main/resources/jndi.properties
@@ -1,4 +1,3 @@
 java.naming.factory.initial=org.apache.activemq.artemis.jndi.ActiveMQInitialContextFactory
-connectionFactory.ConnectionFactory=http://localhost:8161/
-java.naming.provider.url=http://localhost:8161/
+connectionFactory.ConnectionFactory=tcp://localhost:61616/
 queue.queue/myQueue=myQueue
