--- a/JmsFundamentals/src/main/resources/jndi.properties
+++ b/JmsFundamentals/src/main/resources/jndi.properties
@@ -1,3 +1,4 @@
 java.naming.factory.initial=org.apache.activemq.artemis.jndi.ActiveMQInitialContextFactory
 connectionFactory.ConnectionFactory=tcp://localhost:616161
 queue.queue/myQueue=myQueue
+topic.topic/myTopic=myTopic
