--- a/JmsFundamentals/src/main/resources/jndi.properties
+++ b/JmsFundamentals/src/main/resources/jndi.properties
@@ -2,3 +2,5 @@ java.naming.factory.initial=org.apache.activemq.artemis.jndi.ActiveMQInitialCont
 connectionFactory.ConnectionFactory=tcp://localhost:616161
 queue.queue/myQueue=myQueue
 topic.topic/myTopic=myTopic
+queue.queue/requestQueue=requestQueue
+queue.queue/replyQueue=replyQueue
