--- a/JmsFundamentals/src/main/resources/jndi.properties
+++ b/JmsFundamentals/src/main/resources/jndi.properties
@@ -1,5 +1,5 @@
 java.naming.factory.initial=org.apache.activemq.artemis.jndi.ActiveMQInitialContextFactory
-connectionFactory.ConnectionFactory=tcp://localhost:616161
+connectionFactory.ConnectionFactory=tcp://localhost:61616/
 queue.queue/myQueue=myQueue
 topic.topic/myTopic=myTopic
 queue.queue/requestQueue=requestQueue
