--- a/pub-sub/pom.xml
+++ b/pub-sub/pom.xml
@@ -4,15 +4,15 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.jawojnar.basics</groupId>
-    <artifactId>JmsFundamentals</artifactId>
+    <groupId>com.jawojnar.jms</groupId>
+    <artifactId>pub-sub</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <packaging>jar</packaging>
+
     <properties>
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
-
     <dependencies>
         <!-- https://mvnrepository.com/artifact/org.apache.activemq/artemis-server -->
         <dependency>
@@ -20,8 +20,6 @@
             <artifactId>artemis-jms-client-all</artifactId>
             <version>2.28.0</version>
         </dependency>
-
     </dependencies>
-
 
 </project>
