pub-sub: assignment

--- a/pub-sub/src/main/resources/jndi.properties
+++ b/pub-sub/src/main/resources/jndi.properties
@@ -1,3 +1,5 @@
 java.naming.factory.initial=org.apache.activemq.artemis.jndi.ActiveMQInitialContextFactory
 connectionFactory.ConnectionFactory=tcp://localhost:61616/
 topic.topic/empTopic=empTopic
+topic.topic/cardTopic=cardTopic
+queue.queue/replyQueue=replyQueue
