--- a/pub-sub/pom.xml
+++ b/pub-sub/pom.xml
@@ -20,6 +20,14 @@
             <artifactId>artemis-jms-client-all</artifactId>
             <version>2.28.0</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.28</version>
+            <scope>provided</scope>
+        </dependency>
+
     </dependencies>
 
 </project>
