--- a/p2p/src/main/resources/jndi.properties
+++ b/p2p/src/main/resources/jndi.properties
@@ -1,4 +1,4 @@
 java.naming.factory.initial=org.apache.activemq.artemis.jndi.ActiveMQInitialContextFactory
 connectionFactory.ConnectionFactory=tcp://localhost:61616/
-queue.queue/requestQueue=requestQueue
-queue.queue/replyQueue=replyQueue
+queue.queue/requestQueue=jawojnar.queues.request.requestQueue
+queue.queue/replyQueue=jawojnar.queues.reply.replyQueue
